--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.25.0",
     "firebase": "^8.9.1",
     "jspdf": "^2.4.0",
     "react": "^17.0.2",
